# raytracer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: camera.rs  colour.rs  lib.rs  main.rs  opts.rs  ratio.rs  ray.rs  surface.rs  threadpool.rs  vec3.rs
src/materials/: lambertian.rs  metal.rs  mod.rs  transparent.rs
src/objects/: sphere.rs
