[package]
name = "raytracer"
version = "0.1.0"
authors = ["Eric Langlois <eric@langlois.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
image = "0.23.13"
indicatif = "0.15.0"
num-traits = "0.2"
